Changes done to fix the UI layout issue

--- a/src/components/moviesList/moviesList.css
+++ b/src/components/moviesList/moviesList.css
@@ -1,16 +1,38 @@
 .mainlist {
     list-style: none;
-    display: flex;
+    /* display: flex;
     margin: 1rem;
     flex-direction: row;
     width: 100%;
     height: 100%;
     PADDING: 1REM;
-    FLEX-WRAP: wrap;
+    FLEX-WRAP: wrap; */
+
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 10px;
+    align-items: stretch;
   }
-  
-  .imageStyle {
+  .grid-contents {
     height: 10rem;
     width: 10rem;
     margin: 0.5rem;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    max-width: 100%;
+  }
+  .image-style {
+    width:160px;
+    height: 160px;
+  }
+  .App-header {
+    background-color: cadetblue;
+    min-height: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    /* height: 50px; */
   }
